get rid of any htmx references

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/static/site.css">
 </head>
 <body>
-<main hx-indicator="#indicator">
+<main>
     <header>
         <h1>
             <all-caps>contacts.app</all-caps>
